--- a/src/Product/product.css
+++ b/src/Product/product.css
@@ -5,8 +5,8 @@
   background-repeat: no-repeat;
   padding: 20px;
   /* margin-bottom: 20px; */
-  margin-top: 10rem;
-  height: 100%;
+  /* margin-top: 10rem; */
+  /* height: 100%; */
 
 }
 
