--- a/src/About/about.css
+++ b/src/About/about.css
@@ -1,30 +1,36 @@
 #about {
-  /* background-color: #00563b; */
-  /* height: 100%; Remove the height property */
+  background-color: #00563b;
+  /* height: 100%; */
   /* margin-top: 20rem; */
   /* height: 100%; */
-  position:static;
-  margin-top: 6rem;
-  background-image: url("about-bg.png");
+  position: static;
+  /* margin-top: 6rem; */
+  /* background-image: url("about-bg.png"); */
+  /* background-color: green; */
+  margin-bottom: 20rem;
 }
 
+
 .about-text {
-  width: 80%;
+  /* width: 80%; */
   /* margin: 0 auto; */
   color: gold;
   text-align: center;
+  margin-top: 15rem; /* Adjust this value */
 }
 
+
 .card {
-  width: 70%;
-  margin: 10px auto; /* Update the margin property */
+  width: 70%; /* Adjust this value */
+  margin: 10px auto; /* Adjust this value */
   border: 1px solid black;
   padding: 10px;
   text-align: center;
   border-radius: 50px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.5);
-  background-color: lightyellow;
+  background-color: rgb(251, 251, 101);
 }
+
 
 .card-title {
   color: chocolate;
